# simpleJsonApp/docs/swagger.json
@@ -16,8 +16,39 @@
         "version": "0.1.0"
     },
     "paths": {
+        "/auth/token": {
+            "get": {
+                "description": "generates token based out of no credentials for now",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "generate a token",
+                "responses": {
+                    "200": {
+                        "description": "token to be used",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/record": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "update a record within the json file",
                 "consumes": [
                     "application/json"
@@ -53,6 +84,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "create a record within the json file",
                 "consumes": [
                     "application/json"
@@ -94,6 +130,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "delete a record within the json file",
                 "consumes": [
                     "application/json"
@@ -165,6 +206,11 @@
         },
         "/records/{name}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "gets a record within the json file",
                 "consumes": [
                     "application/json"
